--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,6 +7,11 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
+  
+steps:
+- task: BatchScript@1
+  inputs:
+    filename: 'Powershell.ps1'
 
 
