--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,12 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+ - master
 
 pool:
-  vmImage: 'windows-latest'
+ vmImage: 'windows-latest'
 
 steps:
-
+- task: PowerShell@2
+  inputs:
+    filePath: 'Powershell.ps1'
